fix pop overflow style

--- a/style.css
+++ b/style.css
@@ -249,110 +249,159 @@
     top: 139px;
   }
 
-  .contPopUp {
-    z-index: 10;
-    display: none;
-    position: fixed;
-    padding: 10%;
-    color: black;
-    width: 100vw;
-    height: 100vh;
-    box-sizing: border-box;
-    backdrop-filter: blur(5px);
-  }
+/*-------------------------------*/
+.contPopUp {
+  top: 0;
+  left: 0;
+  z-index: 10;
+  display: none;
+  position: fixed;
+  padding: 5% 10% 5% 10%;
+  color: #172b4d;
+  width: 100vw;
+  height: 100vh;
+  box-sizing: border-box;
+  backdrop-filter: blur(5px);
+}
 
-  .popUp-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
 
-  .contentPopUp {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    width: 100%;
-    height: 85vh;
-    padding: 0% 5% 5% 5%;
-    box-sizing: border-box;
-  }
 
-  .popUp-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-  }
+.popUp-main {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
 
-  .popUpImg {
-    width: 100%;
-    height: auto;
-  }
+.contentPopUp {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  width: 100%;
+  height: 95vh;
+  padding: 3% 2% 2% 2%;
+  box-sizing: border-box;
+}
 
-  .exitButton {
-    left: 150px;
-    background-color: transparent;
-    background-image: url(images/exit.png);
-    width: 24px;
-    height: 24px;
-    border: none;
-  }
+.popUp-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  font-size: 4vh;
+}
 
-  .popUp-stack {
-    padding: 0%;
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    text-align: center;
-  }
+.popUph2-m {
+  margin: 0;
+  font-family: 'Crete Round', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 6vh;
+}
 
-  .popUp-btns {
-    padding: 0;
-    width: 75%;
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-  }
+.popUpImg {
+  width: 100%;
+  height: 29vh;
+  object-fit: cover;
+}
 
-  .button-Live {
-    color: white;
-    background-color: #ff6b00;
-    padding: 10px 12px;
-    width: 135%;
-    height: 48px;
-    border: 1px solid #ff6b00;
-    text-align: start;
-    background-image: url('images/icon-arrow.png');
-    background-repeat: no-repeat;
-    background-position: 85% 50%;
-  }
+.exitButton {
+  left: 150px;
+  background-color: transparent;
+  background-image: url(images/exit.png);
+  width: 24px;
+  height: 24px;
+  border: none;
+}
 
-  .button-Source {
-    color: white;
-    background-color: #ff6b00;
-    padding: 10px 12px;
-    width: 130%;
-    height: 48px;
-    border: 1px solid #ff6b00;
-    text-align: start;
-    background-image: url('images/GitHubcat-2.png');
-    background-repeat: no-repeat;
-    background-position: 85% 50%;
-  }
+.popUp-stack {
+  padding: 0%;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  text-align: center;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  height: 9vmin;
+}
 
-  .img-btn {
-    z-index: 200;
-    width: 30px;
-    height: auto;
-    position: relative;
-    right: 35px;
-  }
+.popUp-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
+.popUp-paragraph {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+
+.popUp-text {
+  width: 100%;
+  height: auto;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 2.2vh;
+}
+
+.listPopUp {
+  width: 40%;
+}
+
+.popUp-btns {
+  width: 100%;
+  height: 6vh;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: relative;
+}
+
+.button-Live {
+  font-size: 2vmin;
+  color: white;
+  background-color: #ff6b00;
+  padding: 5px 12px;
+  width: 100%;
+  height: 6vh;
+  border: 1px solid #ff6b00;
+  text-align: start;
+  background-image: url('images/icon-arrow.png');
+  background-repeat: no-repeat;
+  background-position: 85% 50%;
+  font-size: 3vmin;
+}
+
+.button-Source {
+  font-size: 2vmin;
+  color: white;
+  background-color: #ff6b00;
+  padding: 1% 6%;
+  width: 100%;
+  height: 6vh;
+  border: 1px solid #ff6b00;
+  text-align: start;
+  background-image: url('images/GitHubcat-2.png');
+  background-repeat: no-repeat;
+  background-position: 85% 50%;
+  font-size: 3vmin;
+}
+
+.img-btn {
+  z-index: 200;
+  width: 30px;
+  height: auto;
+  position: relative;
+  right: 30px;
+}
+/*-------------------------------*/
   .section-2 {
     display: flex;
     flex-direction: column;
@@ -1310,6 +1359,7 @@
   }
 
   .popUp-stack {
+    height: 8vh;
     padding: 0%;
     list-style: none;
     display: flex;
